# curve3d

./: .gitignore  CMakeLists.txt  README.md
Curves3D/: CMakeLists.txt  Circle.cpp  Circle.hpp  Curve.cpp  Curve.hpp  CurveVector.cpp  CurveVector.hpp  Curves3D.cpp  Curves3D.hpp  Ellipse.cpp  Ellipse.hpp  Helix.cpp  Helix.hpp  Point.cpp  Point.hpp  Randomizer.cpp  Randomizer.hpp  VectorGenerator.cpp  VectorGenerator.hpp
Curves3D/include/: Circle.hpp  CurveVector.hpp  Ellipse.hpp  Helix.hpp  Point.hpp  Randomizer.hpp
